--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/covid-19/about/">About Me</a><a class="page-link" href="/covid-19/search/">Search</a><a class="page-link" href="/covid-19/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/covid-19/about/">About</a><a class="page-link" href="/covid-19/search/">Search</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
