--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://libreai.github.io/covid-19/404.html" />
 <meta property="og:site_name" content="Covid-19" />
 <script type="application/ld+json">
-{"description":"This is a Libre AI initiative — www.libreai.com ; Dublin, Ireland.","@type":"WebPage","headline":"Covid-19","url":"https://libreai.github.io/covid-19/404.html","@context":"https://schema.org"}</script>
+{"description":"This is a Libre AI initiative — www.libreai.com ; Dublin, Ireland.","headline":"Covid-19","@type":"WebPage","url":"https://libreai.github.io/covid-19/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/covid-19/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://libreai.github.io/covid-19/feed.xml" title="Covid-19" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -32,7 +32,7 @@
 <meta property="og:url" content="https://libreai.github.io/covid-19/404.html" />
 <meta property="og:site_name" content="Covid-19" />
 <script type="application/ld+json">
-{"description":"This is a Libre AI initiative — www.libreai.com ; Dublin, Ireland.","@type":"WebPage","headline":"Covid-19","url":"https://libreai.github.io/covid-19/404.html","@context":"https://schema.org"}</script>
+{"description":"This is a Libre AI initiative — www.libreai.com ; Dublin, Ireland.","headline":"Covid-19","@type":"WebPage","url":"https://libreai.github.io/covid-19/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
