--- a/about/index.html
+++ b/about/index.html
@@ -117,7 +117,7 @@ window.onload = wrap_img;
 
 <p>This is a project of <a href="https://libreai.com">Libre AI</a>.</p>
 
-<p>Except where otherwise noted, content on this site, including the notebooks and figures, is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>&lt; &gt;<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>. 2020.</p>
+<p>Except where otherwise noted, content on this site, including the notebooks and figures, is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>. 2020.</p>
 
 <hr />
 <p>built with <a href="https://github.com/fastai/fastpages">fastpages</a></p>
