deploy: 86edf66f7521caaca69a9df11f9f4c3956bd6614

--- a/covid-19-dashboard-ie/index.html
+++ b/covid-19-dashboard-ie/index.html
@@ -184,13 +184,24 @@ window.onload = wrap_img;
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <hr />
-<h1>Total Deaths: <span style="color:red">6<span>&lt;/h1&gt;
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1> Total Deaths: <span style="color:red">6<span> &lt;/h1&gt;
 <h1>Total Confirmed: <span style="color:red">1125<span>&lt;/h1&gt;
+&lt;/div&gt;
+&lt;/div&gt;
+&lt;/div&gt;
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <hr />
 
-&lt;/div&gt;
-&lt;/div&gt;
-&lt;/div&gt;
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <blockquote><p>Importan: <strong>Starting on March 16th, 2020, Ireland has more #COVID19 cases per million (and growing quickly) than the most affected countries in Europe, Italy and Spain, at their early stages. See the visualizations below.</strong></p>
@@ -220,10 +231,10 @@ window.onload = wrap_img;
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-9d16bd4382c84d6cbbb20ffda785c7ec"></div>
+<div id="altair-viz-696091f306ec4480be2c99dc4f2f1526"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-9d16bd4382c84d6cbbb20ffda785c7ec");
+    const outputDiv = document.getElementById("altair-viz-696091f306ec4480be2c99dc4f2f1526");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
@@ -301,10 +312,10 @@ window.onload = wrap_img;
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-d6f35a7b44d24e7b961abd4f35850cd2"></div>
+<div id="altair-viz-7f5e4c53c0ec4383a110908a91103a3c"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-d6f35a7b44d24e7b961abd4f35850cd2");
+    const outputDiv = document.getElementById("altair-viz-7f5e4c53c0ec4383a110908a91103a3c");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
