deploy: f49107fbddd5e64059929c9bce360da02c312748

--- a/covid-19-dashboard-ie/index.html
+++ b/covid-19-dashboard-ie/index.html
@@ -190,11 +190,11 @@ window.onload = wrap_img;
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1> Total Deaths: <span style="color:red">6<span> &lt;/h1&gt;
-<h1>Total Confirmed: <span style="color:red">1125<span>&lt;/h1&gt;
-&lt;/div&gt;
-&lt;/div&gt;
-&lt;/div&gt;
+<h1> Total Deaths: <span style="color:red">6</span> </h1>
+<h1>Total Confirmed: <span style="color:red">1125</span></h1>
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <hr />
@@ -379,10 +379,8 @@ window.onload = wrap_img;
 </div>
 </div>
 </div>
-&lt;/div&gt;
- 
+</div>
 
-</span></span></h1></span></span></h1></div></div></div></div>
 
 
   </div><a class="u-url" href="/covid-19/covid-19-dashboard-ie/" hidden></a>
