deploy: 28011d99886837cb9812a9c203a0e63d1e9ce3a9

--- a/covid-19-dashboard-ie/index.html
+++ b/covid-19-dashboard-ie/index.html
@@ -190,7 +190,9 @@ window.onload = wrap_img;
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1>Total Confirmed: <span style="color:red">1125</span> &nbsp; Total Deaths: <span style="color:red">6</span> &nbsp; Total Recovered: <span style="color:green">5</span></h1>
+<h1>Total Confirmed: <span style="color:red">1125</span></h1>
+<h1>Total Deaths: <span style="color:red">6</span></h1> 
+<h1>Total Recovered: <span style="color:green">5</span></h1>
 </div>
 </div>
 </div>
@@ -232,10 +234,10 @@ window.onload = wrap_img;
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-164d670170db48af8ce2e7d294fdf31b"></div>
+<div id="altair-viz-843d8e8c332b4fa7aa6867d13109f5b2"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-164d670170db48af8ce2e7d294fdf31b");
+    const outputDiv = document.getElementById("altair-viz-843d8e8c332b4fa7aa6867d13109f5b2");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
@@ -320,10 +322,10 @@ window.onload = wrap_img;
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-f98566a5b89d4b42851998d1af4a394a"></div>
+<div id="altair-viz-18b6dc9825ae47738270c41aa84010a5"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-f98566a5b89d4b42851998d1af4a394a");
+    const outputDiv = document.getElementById("altair-viz-18b6dc9825ae47738270c41aa84010a5");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
