deploy: bdfdb983b1d25e5631cae48008dd27654f9caec2

--- a/covid-19-ca/index.html
+++ b/covid-19-ca/index.html
@@ -205,6 +205,16 @@ window.onload = wrap_img;
 </div>
     
 
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr />
+<h3 id="Data-Sources">Data Sources<a class="anchor-link" href="#Data-Sources"> </a></h3><ul>
+<li>2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE [<a href="https://github.com/CSSEGISandData/COVID-19">https://github.com/CSSEGISandData/COVID-19</a>]</li>
+</ul>
+
+</div>
+</div>
+</div>
 </div>
 
 <script type="application/vnd.jupyter.widget-state+json">
