--- a/covid-19-dashboard-ie/index.html
+++ b/covid-19-dashboard-ie/index.html
@@ -175,7 +175,7 @@ window.onload = wrap_img;
 
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<blockquote><p>Last updated on 2020-03-30 07:16 AM IST</p>
+<blockquote><p>Last updated on 2020-03-30 07: 16 AM IST</p>
 </blockquote>
 
 </div>
