--- a/covid-19-dashboard-ie/index.html
+++ b/covid-19-dashboard-ie/index.html
@@ -363,7 +363,7 @@ window.onload = wrap_img;
         </p>
       </div>
       <div class="footer-col">
-        <p>This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020.</p>
+        <p>This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020. CC BY-SA.</p>
       </div>
     </div>
 
