deploy: f2ee9f82faafdad0828b1c4edbc6888a522eb6d0

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://covid19.libreai.com/" />
 <meta property="og:site_name" content="COVID-19" />
 <script type="application/ld+json">
-{"description":"This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020. CC BY-SA.","headline":"COVID-19","@type":"WebSite","url":"https://covid19.libreai.com/","name":"COVID-19","@context":"https://schema.org"}</script>
+{"headline":"COVID-19","description":"This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020. CC BY-SA.","@type":"WebSite","url":"https://covid19.libreai.com/","name":"COVID-19","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://covid19.libreai.com/feed.xml" title="COVID-19" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -32,7 +32,7 @@
 <meta property="og:url" content="https://covid19.libreai.com/" />
 <meta property="og:site_name" content="COVID-19" />
 <script type="application/ld+json">
-{"description":"This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020. CC BY-SA.","headline":"COVID-19","@type":"WebSite","url":"https://covid19.libreai.com/","name":"COVID-19","@context":"https://schema.org"}</script>
+{"headline":"COVID-19","description":"This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020. CC BY-SA.","@type":"WebSite","url":"https://covid19.libreai.com/","name":"COVID-19","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
