--- a/search/index.html
+++ b/search/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://covid19.libreai.com/search/" />
 <meta property="og:site_name" content="COVID-19" />
 <script type="application/ld+json">
-{"description":"This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020. CC BY-SA.","headline":"Search","@type":"WebPage","url":"https://covid19.libreai.com/search/","@context":"https://schema.org"}</script>
+{"headline":"Search","description":"This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020. CC BY-SA.","@type":"WebPage","url":"https://covid19.libreai.com/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://covid19.libreai.com/feed.xml" title="COVID-19" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -32,7 +32,7 @@
 <meta property="og:url" content="https://covid19.libreai.com/search/" />
 <meta property="og:site_name" content="COVID-19" />
 <script type="application/ld+json">
-{"description":"This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020. CC BY-SA.","headline":"Search","@type":"WebPage","url":"https://covid19.libreai.com/search/","@context":"https://schema.org"}</script>
+{"headline":"Search","description":"This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020. CC BY-SA.","@type":"WebPage","url":"https://covid19.libreai.com/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
